<resources>
    <string name="app_name">ALEXZA</string>
    <string name="login_activity_name">Dyslexia Friendly Buddy</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">Home Page</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="your_title">Dictionary</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="contact_form">Contact Us</string>
    <string name="contact_form_name">Your Name</string>
    <string name="contact_form_email">Your Email</string>
    <string name="contact_form_subject">Subject</string>
    <string name="contact_form_message">Message</string>
    <string name="contact_form_button">Send Message</string>
    <string name="contact_form_post_message">Please wait! We\'re sending your message to the marketing department...</string>
    <string name="contact_posted">Your message has been successfully delivered.</string>

    <string name="action_voice">Voice Settings</string>
    <string name="action_chunk">Chunk Settings</string>
    <string name="action_dictionary">Dictionary Support</string>

    <!-- string related to TTS settings-->
    <string name="pitchRate">Pitch</string>
    <string name="speedRate">Speed</string>
    <string name="volume">Volume</string>
    <string name="textHighlight">Text Highlight Colors</string>
    <string name="highlightColors">Highlight Colors</string>

    <!-- string related to chunking and dictionary -->
    <string name="chunk">Chunk</string>
    <string name="word_count">Word Count</string>
    <string name="font_settings">Font Settings</string>
    <string name="font_size">Font Size</string>
    <string name="font_style">Font Style</string>
    <string name="font_prompt">Font Prompt</string>
    <string name="font_color">Font Color</string>
    <string name="color">Color</string>
    <string name="picker_1">Font Color Picker</string>
    <string name="back_color">Back Color</string>
    <string name="todo">To Do</string>
    <string name="background_color">Background Color</string>
    <string name="picker_2">Background Color Picker</string>
    <string name="save">Save</string>
    <string name="next_chunk">Next Chunk</string>
    <string name="text">No Text</string>
    <string name="textview">TextView</string>
    <string name="enter_the_word">Enter the word</string>
    <string name="button">Button</string>
    <string name="chunking">Chunking</string>
    <string name="dictionary">My Dictionary</string>
    <string name="action_dictionary_label">Dictionary</string>
    <string name="count">count</string>
    <string name="definition">Definition:</string>
    <string name="phonotic_notation">Phonotic Notation:</string>
    <string name="colorpicker_dialog_title">Choose the color</string>
    <string name="colorpicker_dialog_cancel">CANCEL</string>
    <string name="colorpicker_dialog_ok">OK</string>


</resources>
