<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".TTS_SettingsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:paddingTop="30dp"
        android:text="@string/pitchRate"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/pitch_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/seekBar_pitch"
        android:layout_gravity="center"
        android:text="0%"
        android:textSize="18dp" />


    <SeekBar
        android:id="@+id/seekBar_pitch"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:progress="50" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:paddingTop="10dp"
        android:text="@string/speedRate"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/speed_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/seekBar_speed"
        android:layout_gravity="center"
        android:text="0%"
        android:textSize="18dp" />


    <SeekBar
        android:id="@+id/seekBar_speed"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:progress="50" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:paddingTop="30dp"
        android:text="@string/volume"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/volume_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/seekBar_volume"
        android:layout_gravity="center"
        android:text="0%"
        android:textSize="18dp" />

    <SeekBar
        android:id="@+id/seekBar_volume"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:progress="50" />

</LinearLayout>