<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.fsociety2.dyslexiafriendlybuddy.LoginActivity"
    android:background="@drawable/login_background1">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            
            <ImageView
                android:layout_width="240dp"
                android:layout_height="240dp"
                android:layout_gravity="center_horizontal"
                android:padding="16dp"
                android:layout_marginTop="45dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/alexa_logo"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:background="@android:color/transparent"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:drawablePadding="12dp"
                    android:padding="8dp"
                    android:textColorHint="#fff"
                    android:drawableLeft="@drawable/ic_person_black_24dp"/>

            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#fff"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:drawablePadding="12dp"
                    android:textColorHint="#fff"
                    android:background="@android:color/transparent"
                    android:layout_marginTop="4dp"
                    android:padding="8dp"
                    android:drawableLeft="@drawable/ic_lock_black_24dp"/>

            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#fff"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="#fff"
                android:text="Remember Me "
                android:padding="8dp"
                />

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:textColor="#f16f7d"
                android:padding="16dp"
                android:clickable="true"
                android:background="@drawable/login_button_background"/>
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Forgot your Password? "
                style="@style/Base.TextAppearance.AppCompat.Body2"
                android:textColor="#fff"
                android:padding="16dp"
                android:clickable="true"
                android:layout_marginBottom="16dp"
                />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
